[package]
name = "xmlite"
version = "0.3.0"
edition = "2024"
authors = ["vodofrede"]
description = "a light-weight, read-write XML parser."
homepage = "https://github.com/vodofrede/xmlite-rs"
repository = "https://github.com/vodofrede/xmlite-rs"
readme = "readme.md"
license = "AGPL-3.0-or-later"
keywords = ["xml", "parser", "rust"]
categories = ["parsing"]

[dependencies]
